#14746 - fix image align

--- a/app/assets/stylesheets/refinery_pages.scss
+++ b/app/assets/stylesheets/refinery_pages.scss
@@ -95,6 +95,16 @@
     text-align: center;
   }
 
+  .image-align-left {
+    float: left;
+    margin-right: 1.5em;
+  }
+
+  .image-align-right {
+    float: right;
+    margin-left: 1.5em;
+  }
+
   .img-full {
     width: 100%;
 
